--- a/index.html
+++ b/index.html
@@ -1,20 +1,61 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SPA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
+
 <body>
-    <div id="content">
-    <div id="profile">
-        <div id="avatar"><img id="img" src=""></div>
-        <div id="name"><h2>Name</h2></div>
+    <nav class="navbar navbar-dark bg-dark">
+        <form class="form-inline">
+            <img id="github" src="http://pngimg.com/uploads/github/github_PNG63.png" alt="github icon" />
+        </form>
+    </nav>
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-3" id="profile">
+                <p id="avatar"><img id="img" src=""></p>
+                <h3>Name</h3>
+                <p id="name"></p>
+                <h3>Company</h3>
+                <p id="company"><i class='fas fa-restroom' style='font-size:24px'></i> </p>
+                <h3>Location</h3>
+                <p id="location"><i class='fas fa-map-marker-alt' style='font-size:24px'></i> </p>
+            </div>
+
+            <div class="col-3"></div>
+
+            <div class="col-4" id="repo">
+                <h3>Repositories</h3>
+                <p id="list"></p>
+            </div>
+
+        </div>
+
     </div>
-        <div id="list">List</div>
-    </div>
+
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+
+
 </body>
+
 </html>
